feat: Complete branding updates and deployment configuration
- Update favicon with ScoreDesk branding (SVG + ICO)
- Add contact information: Abuja address and phone (09063412927)
- Update email to scoredesk.ng@gmail.com
- Replace navbar graduation cap with BookOpen icon for consistency
- Enhance title and description with ScoreDesk branding
- Add comprehensive Netlify deployment configuration
- Improve SEO with proper meta tags and social sharing
- Update copyright to include Binah Innovation

--- a/index.html
+++ b/index.html
@@ -4,18 +4,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>score-nexus-nigeria</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>ScoreDesk - Nigerian School Management System</title>
+    <meta name="description" content="ScoreDesk - The comprehensive school management system for Nigerian schools. Manage students, results, attendance, question papers, and more with ease." />
+    <meta name="author" content="Binah Innovation" />
+    <meta name="keywords" content="ScoreDesk, school management, Nigeria, education, student results, attendance, question papers, Nigerian schools" />
+    
+    <!-- Contact Information -->
+    <meta name="contact:phone" content="09063412927" />
+    <meta name="contact:address" content="Abuja, Nigeria" />
 
-    <meta property="og:title" content="score-nexus-nigeria" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico" />
+
+    <meta property="og:title" content="ScoreDesk - Nigerian School Management System" />
+    <meta property="og:description" content="ScoreDesk - The comprehensive school management system for Nigerian schools. Manage students, results, attendance, question papers, and more with ease." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:url" content="https://scoredesk.ng" />
+    <meta property="og:locale" content="en_NG" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="ScoreDesk - Nigerian School Management System" />
+    <meta name="twitter:description" content="ScoreDesk - The comprehensive school management system for Nigerian schools." />
+    <meta name="twitter:image" content="/favicon.ico" />
     
     <!-- Add Roboto font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
